--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple TODO App</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <h1>TODO List</h1>
-    <ul>
-        {% for todo in todos %}
-        <li>
-            {{ todo.title }} - {{ todo.description }}
-            <a href="{{ url_for('edit', todo_id=todo._id) }}">Edit</a>
-            <a href="{{ url_for('delete', todo_id=todo._id) }}">Delete</a>
-        </li>
-        {% endfor %}
-    </ul>
-    <p><a href="{{ url_for('create') }}">Add New TODO</a></p>
+    <div class="container mt-5">
+        <h1>TODO List</h1>
+        <ul class="list-group">
+            {% for todo in todos %}
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                <div>
+                    <h5>{{ todo.title }}</h5>
+                    <small class="text-muted">{{ todo.description }}</small>
+                </div>
+                <div>
+                    <a href="{{ url_for('edit', todo_id=todo._id) }}" class="btn btn-sm btn-primary mr-2">Edit</a>
+                    <a href="{{ url_for('delete', todo_id=todo._id) }}" class="btn btn-sm btn-danger">Delete</a>
+                </div>
+            </li>
+            {% endfor %}
+        </ul>
+        <p class="mt-3"><a href="{{ url_for('create') }}" class="btn btn-success">Add New TODO</a></p>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
