--- a/templates/create.html
+++ b/templates/create.html
@@ -17,13 +17,12 @@
             </div>
             <div class="form-group">
                 <label for="description">Description:</label>
-                <textarea class="form-control" id="description" name="description"></textarea>
+                <textarea class="form-control" id="description" name="description" style="white-space: pre-line; text-align: justify;"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Create</button>
         </form>
         <p class="mt-3"><a href="{{ url_for('index') }}" class="btn btn-secondary">Back to List</a></p>
     </div>
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
