--- a/templates/index.html
+++ b/templates/index.html
@@ -13,11 +13,11 @@
         <ul class="list-group">
             {% for todo in todos %}
             <li class="list-group-item d-flex justify-content-between align-items-center">
-                <div>
-                    <h5>{{ todo.title }}</h5>
-                    <small class="text-muted">{{ todo.description }}</small>
+                <div class="mr-3 flex-grow-1">
+                    <h4>{{ todo.title }}</h4>
+                    <p class="text-muted" style="white-space: pre-line; text-align: justify;">{{ todo.description }}</p>
                 </div>
-                <div>
+                <div class="d-flex">
                     <a href="{{ url_for('edit', todo_id=todo._id) }}" class="btn btn-sm btn-primary mr-2">Edit</a>
                     <a href="{{ url_for('delete', todo_id=todo._id) }}" class="btn btn-sm btn-danger">Delete</a>
                 </div>
@@ -26,10 +26,10 @@
         </ul>
         <p class="mt-3"><a href="{{ url_for('create') }}" class="btn btn-success">Add New TODO</a></p>
     </div>
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
+
